--- a/new.html
+++ b/new.html
@@ -578,7 +578,7 @@
         const usersbox = document.querySelector("#userboxa");
         const messageContent = document.getElementById("usermsg");
         const msgform = document.getElementById("msgtest");
-        const myUsername;
+        let myUsername;
 
         var couleur = 0;
 
