--- a/new.html
+++ b/new.html
@@ -586,8 +586,8 @@
         const log_input = document.getElementById("login_input");
 
 
-        log_input.addEventListener("onkeyup", login(event) );
-        log_button.addEventListener("onclick", login(event) );
+        log_input.addEventListener("keyup", login);
+        log_button.addEventListener("onclick", login );
         
         function login(event){
 
