--- a/new.html
+++ b/new.html
@@ -587,7 +587,7 @@
 
 
         log_input.addEventListener("keyup", login);
-        log_button.addEventListener("onclick", login );
+        log_button.addEventListener("click", login );
         
         function login(event){
 
