--- a/new.html
+++ b/new.html
@@ -696,7 +696,9 @@
                 else {
                     newhourline.textContent += " : " + minute;
                 }
-
+                    
+                newhourline.style.align = center;
+                
                 let newMessageLine = document.createElement('p');
                 newMessageLine.classList.add("backLine");
                 newMessageLine.textContent = msg["pseudo"] + " : " + message;
