--- a/new.html
+++ b/new.html
@@ -17,7 +17,10 @@
             margin: 0;
             font-family: italic 1.2em "Fira Sans", serif;
         }
-
+        
+        html{
+            overflow:hidden;   
+        }
         #video_background {
             position: fixed;
             width: 100%;
@@ -295,7 +298,7 @@
         #pillier {
             position: relative;
             bottom: 0;
-            height: 50%;
+            height: 1000%;
         }
 
 
