--- a/new.html
+++ b/new.html
@@ -444,6 +444,18 @@
             font-size: 20px;
         }
     </style>
+    
+    <!--/*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/
+        /*--------------------------HTML---------------------------*/
+        /*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/
+        /*---------------------------------------------------------*/-->
     <title>Kaiwa</title>
 </head>
 
