--- a/new.html
+++ b/new.html
@@ -468,77 +468,77 @@
         <div><input type="text" required minlength="3" maxlength="15" autocomplete="off" id="login_input"></div>
     </div>
 
-
-    <div>
-        <video autoplay muted loop id="video_background">
-            <source src="https://drive.google.com/uc?export=download&id=1zQQSzjPPKO7cH-a2qiEJFAJtCQdpfqd0"
-                type="video/mp4">
-        </video>
-    </div>
-
-    <div id="logo_title">
-        <div id="logo">
-            <img src="https://i.ibb.co/z4PMGsj/logo.png" height="213.6" width="267" id="logos">
+    <div id="MAIN_PAGE">
+        <div>
+            <video autoplay muted loop id="video_background">
+                <source src="https://drive.google.com/uc?export=download&id=1zQQSzjPPKO7cH-a2qiEJFAJtCQdpfqd0"
+                    type="video/mp4">
+            </video>
         </div>
 
-        <div class="brand">
-            <div class="welcome">Welcome on</div>
-            <div class="welcome"> Kaiwa</div>
-            <div class="welcome">!</div>
-        </div>
-    </div>
+        <div id="logo_title">
+            <div id="logo">
+                <img src="https://i.ibb.co/z4PMGsj/logo.png" height="213.6" width="267" id="logos">
+            </div>
 
-
-    <div id="titre_tchat_user">
-        <div id="titre_tchat">
-            <p class="ttuc1">Main Chat</p>
-        </div>
-        <div id="titre_user">
-            <p class="ttuc1">Online</p>
-        </div>
-    </div>
-
-
-    <div id="tchat_username">
-
-        <div id="tchatbox_border">
-            <div id="tchathour"></div>
-            <div id="tchatboxb">
-                <div id="tchatboxa"></div>
+            <div class="brand">
+                <div class="welcome">Welcome on</div>
+                <div class="welcome"> Kaiwa</div>
+                <div class="welcome">!</div>
             </div>
         </div>
 
-        <div id="userbox_border">
-            <div id="userboxb">
-                <div id="userboxa"></div>
+
+        <div id="titre_tchat_user">
+            <div id="titre_tchat">
+                <p class="ttuc1">Main Chat</p>
+            </div>
+            <div id="titre_user">
+                <p class="ttuc1">Online</p>
             </div>
         </div>
 
-        <div id="poutre">
-            <div id="poutre1" class="poutre_c"></div>
-            <div id="poutre2" class="poutre_c"></div>
+
+        <div id="tchat_username">
+
+            <div id="tchatbox_border">
+                <div id="tchathour"></div>
+                <div id="tchatboxb">
+                    <div id="tchatboxa"></div>
+                </div>
+            </div>
+
+            <div id="userbox_border">
+                <div id="userboxb">
+                    <div id="userboxa"></div>
+                </div>
+            </div>
+
+            <div id="poutre">
+                <div id="poutre1" class="poutre_c"></div>
+                <div id="poutre2" class="poutre_c"></div>
+            </div>
+        </div>
+
+        <div id="messagerie">
+            <form id="msgtest">
+                <input name="usermsg" type="text" id="usermsg" autocomplete="off" placeholder="Message" />
+                <button name="submitmsg" type="submit" id="submitmsg" value="Send"></button>
+            </form>
+            <div id="mapub">
+                <a href="https://twitter.com/Aisudaga" target="_blank">
+                    <img src="https://i.ibb.co/b6yG92x/huoshen-logo-tr.png" height="25px" width="25px" href="#">
+                </a>
+            </div>
+
+
+            <div id="pillier">
+                <div id="pillier1" class="pilliers"></div>
+                <div id="pillier2" class="pilliers"></div>
+                <div id="pillier3" class="pilliers"></div>
+            </div>
         </div>
     </div>
-
-    <div id="messagerie">
-        <form id="msgtest">
-            <input name="usermsg" type="text" id="usermsg" autocomplete="off" placeholder="Message" />
-            <button name="submitmsg" type="submit" id="submitmsg" value="Send"></button>
-        </form>
-        <div id="mapub">
-            <a href="https://twitter.com/Aisudaga" target="_blank">
-                <img src="https://i.ibb.co/b6yG92x/huoshen-logo-tr.png" height="25px" width="25px" href="#">
-            </a>
-        </div>
-
-
-        <div id="pillier">
-            <div id="pillier1" class="pilliers"></div>
-            <div id="pillier2" class="pilliers"></div>
-            <div id="pillier3" class="pilliers"></div>
-        </div>
-    </div>
-
     <script src="/socket.io/socket.io.js"></script>
     <script>
 
