--- a/new.html
+++ b/new.html
@@ -428,6 +428,7 @@
             top: 30%;
             left: 34.2%;
             border: 2px solid rgb(160, 160, 160);
+            cursor: pointer;
         }
 
         #login_input {
