--- a/new.html
+++ b/new.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/n0XGvpG/logo-kaiwa.png"/>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Rajdhani&display=swap');
 
