--- a/new.html
+++ b/new.html
@@ -541,6 +541,7 @@
             </div>
         </div>
     </div>
+    <script src="leaves.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
 
