--- a/new.html
+++ b/new.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/n0XGvpG/logo-kaiwa.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Rajdhani&display=swap');
 
