--- a/new.html
+++ b/new.html
@@ -494,7 +494,7 @@
 
         <div id="titre_tchat_user">
             <div id="titre_tchat">
-                <p class="ttuc1">Main Chat</p>
+                <a href="animation/page3.html"><p class="ttuc1">Main Chat</p></a>
             </div>
             <div id="titre_user">
                 <p class="ttuc1">Online</p>
