--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
     <div id="login_page">
         <a href="">about</a>
     </div>
-    <li><a href="/new2.html" >Back</a></li>
+    <li><a href="new.html" >Back</a></li>
 
 
 </body>
