--- a/new.html
+++ b/new.html
@@ -11,7 +11,7 @@
         :root {
             --text_color: #54b8fa;
             --border_color: rgb(184, 7, 190);
-            --bg_color: rgba(105, 103, 105, 0.5);
+            --bg_color: rgba(0, 0, 0, 0.6);
         }
 
         * {
@@ -607,8 +607,8 @@
 
         log_input.addEventListener("keyup", login);
         log_button.addEventListener("click", login2);
-        heurebox.style.display = "none";
-        chatbox.style.display = "none";
+        //heurebox.style.display = "none";
+        //chatbox.style.display = "none";
         function login(event) {
 
             let log_pseudo = String(log_input.value);
@@ -622,8 +622,8 @@
                     socket.emit('new-user', log_pseudo);
                     socket.on('username is valid', () => {
                         document.getElementById("login_page").style.display = "none";
-                        heurebox.style.display = "block";
-                        chatbox.style.display = "block";
+                        //heurebox.style.display = "block";
+                        //chatbox.style.display = "block";
                         
                     })
                 }
