--- a/new.html
+++ b/new.html
@@ -498,7 +498,7 @@
     </div>
 
      <audio loop muted id="music_audio">
-        <source src="../music_audio.mp3" />     
+        <source src="./music_audio.mp3" />     
     </audio>
     
 
@@ -506,7 +506,7 @@
     <div id="MAIN_PAGE">
         <div id="top_right_buttons">
             <button id="music_button" onclick="play()" class="top_right_button">Unmute</button>
-            <button id="exit_button" onclick="location.href = '../deconnexion/deco.html'" class="top_right_button">Leave</button>
+            <button id="exit_button" class="top_right_button">Leave</button>
         </div>
 
         <div id="logo_title">
