--- a/new.html
+++ b/new.html
@@ -524,7 +524,9 @@
 
         <div id="titre_tchat_user">
             <div id="titre_tchat">
+                <a href="page3.html">
                     <p class="ttuc1">Main Chat</p>
+                </a>
             </div>
             <div id="titre_user">
                 <p class="ttuc1">Online</p>
