--- a/new.html
+++ b/new.html
@@ -498,7 +498,7 @@
     </div>
 
      <audio loop muted id="music_audio">
-        <source src="/animation/music_audio.mp3" />     
+        <source src="music_audio.mp3" />     
     </audio>
     
 
