--- a/new.html
+++ b/new.html
@@ -506,7 +506,7 @@
     <div id="MAIN_PAGE">
         <div id="top_right_buttons">
             <button id="music_button" onclick="play()" class="top_right_button">Unmute</button>
-            <button id="exit_button" onclick="location.href = 'www.google.com'" class="top_right_button">Leave</button>
+            <button id="exit_button" onclick="location.href = 'https://www.google.com'" class="top_right_button">Leave</button>
         </div>
 
         <div id="logo_title">
