--- a/src/connexion/connexion.html
+++ b/src/connexion/connexion.html
@@ -20,7 +20,7 @@
           <h2 class="presentation">Connexion</h1>
         </div>
         <div class="input-field col s12 center">
-          <h5 class="presentation">Veuillez entrer votre mail ou votre pseudo ainsi que votre mot de passe:</h3>
+          <h5 class="presentation">Veuillez entrer votre pseudo ainsi que votre mot de passe:</h3>
         </div>
       </div>
       <div class="row">
@@ -28,7 +28,7 @@
           <input id="idconnexion" type="text" class="validate" 
           oninvalid="this.setCustomValidity('Identifiants incorrects')"
           oninput="this.setCustomValidity('')" autocomplete="off" required>
-          <label for="idconnexion">Pseudo ou Adresse Mail</label>
+          <label for="idconnexion">Pseudo</label>
         </div>
       </div>
       <div class="row">
