--- a/src/deconnexion/deco.html
+++ b/src/deconnexion/deco.html
@@ -32,7 +32,7 @@
       </form>
     </div>
   </div>
-  <form action="../accueil/accueil.html">
+  <form action="https://kaiwaonline.herokuapp.com/">
     <div class="row">
       <div class="mycentered-text">
         <button class="btn btn-primary">Revenir</button>
