--- a/src/sans_pseudo/sans_pseudo.html
+++ b/src/sans_pseudo/sans_pseudo.html
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <a href="../accueil/accueil.html" title="Login" class="ngl btn-floating btn-large waves-effect waves-light red"><i
+  <a href="https://kaiwaonline.herokuapp.com/" title="Login" class="ngl btn-floating btn-large waves-effect waves-light red"><i
       class="material-icons">input</i></a>
   </div>
   </div>
