--- a/src/accueil/accueil.html
+++ b/src/accueil/accueil.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 center ">
-        <h1 class="display-2">Bienvenue sur le chat 100% anonyme Kaïwa.</h1é><br><br>
+        <h1 class="display-2">Bienvenue sur le chat 100% anonyme Kaïwa.</h1><br><br>
       </div>
       <div class="col-12 center ">
         <h1 class="display-4">Veuillez choisir votre moyen de rejoindre le site.</h1><br>
