--- a/src/accueil/accueil.html
+++ b/src/accueil/accueil.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/n0XGvpG/logo-kaiwa.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page d'accueil</title>
