--- a/src/index/index.html
+++ b/src/index/index.html
@@ -107,6 +107,19 @@
             </div>
         </div>
     </div>
+
+
+
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <button id="ban">Ban</button>
+            <button id="kick">Kick</button>
+            <button id="Admin">Admin</button>
+            <button id="PlusAdmin">PlusAdmin</button>
+        </div>
+    </div>
+
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
     <script>
