--- a/src/index/index.html
+++ b/src/index/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/n0XGvpG/logo-kaiwa.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/N32skY0/Sans-titre-2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='index.css'>
     <title>Kaiwa</title>
@@ -46,7 +46,7 @@
 
         <div id="logo_title">
             <div id="logo">
-                <img src="https://i.ibb.co/z4PMGsj/logo.png" height="213.6" width="267" id="logos">
+                <img src="https://i.ibb.co/N32skY0/Sans-titre-2.png" height="213.6" width="213.6" id="logos">
             </div>
 
             <div class="brand">
