--- a/src/inscription/inscription_fin.html
+++ b/src/inscription/inscription_fin.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/n0XGvpG/logo-kaiwa.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/N32skY0/Sans-titre-2.png" />
   <meta charset="UTF-8">
   <title>Transition vers le site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
