--- a/src/index/index.html
+++ b/src/index/index.html
@@ -94,9 +94,7 @@
                 <button name="submitmsg" type="submit" id="submitmsg" value="Send"></button>
             </form>
             <div id="mapub">
-                <a href="https://twitter.com/Aisudaga" target="_blank">
-                    <img src="https://i.ibb.co/b6yG92x/huoshen-logo-tr.png" height="25px" width="25px" href="#">
-                </a>
+                    <img src="https://i.ibb.co/b6yG92x/huoshen-logo-tr.png" height="25px" width="25px" id="pubimage">
             </div>
 
 
